# spread-auth-fa

./: .env  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  build-push.sh  compose.yaml  entrypoint.sh  location.snippet  upstream.snippet
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/spread_auth/: main.py
backend/spread_auth/alembic/: env.py
backend/spread_auth/alembic/versions/: 2dd05ddd1671_project_and_entity_added.py  62b738edfab6_permission_added.py  bf70e6197717_userroles_added.py  e1e97eecb893_.py
backend/spread_auth/api/: auth.py  entity.py  options.py  routes.py
backend/spread_auth/api/v1/: permission.py  project.py  role.py  user.py
backend/spread_auth/core/: cache.py  config.py  db.py  loggers.py  middleware.py  security.py  singleton.py  utils.py
backend/spread_auth/models/: __init__.py  base.py  entity.py  options.py  permission.py  project.py  role.py  user.py  user_roles.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.js  main.js
frontend/src/api/: axiosConfig.js
frontend/src/components/: AddButton.vue  AppBreadcrumbs.vue  NotificationBox.vue  ToolBar.vue  UserInfo.vue
frontend/src/components/Buttons/: AddButton.vue  BaseButton.vue  DeleteButton.vue  EditButton.vue  SaveButton.vue
frontend/src/components/Permission/: NavMenu.vue  PermissionItem.vue  RoleCard.vue  RoleRow.vue  (+2 more)
frontend/src/router/: permissionRoute.js  projectorRoute.js  router.js
frontend/src/stores/: auth.js
frontend/src/views/: LoginView.vue  MainView.vue
(+8 files in other folders)
