[tool.poetry]
name = "spread-auth-fa"
version = "0.1.0"
description = ""
authors = ["e.anisimov <e.anisimov@awada.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
jwt = "^1.3.1"
passlib = "^1.7.4"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.5"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
sqlalchemy-utils = "^0.41.2"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
